# vim-python-docker-template

./: .coc-settings.json.dist  .dockerignore  .env.dist  .gitignore  .vimrc.dist  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
src/sample/: main.py
tests/sample/: test_main.py
