[tool.poetry]
name = "vim-python-docker-template"
version = "0.2.0"
description = "Template"
authors = [
    "John Dev <j_dev@domain.com>",
]
readme = "README.md"
repository = "https://github.com/jamm1985/vim-python-docker-template"

packages = [
    { include = "sample", from="src" },
]

[tool.poetry.scripts]
template_bin = 'sample.main:run'

[tool.poetry.dependencies]
python = "~3.14"
numpy = "~2.4.0"
pandas = "~2.3.3"
scikit-learn = "~1.8.0"
scipy = "~1.16.3"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
coverage = "^7.13.0"
ipython = "^9.8.0"
isort = "^7.0.0"
jupyterlab = "^4.5.1"
matplotlib = "^3.10.8"
pre-commit = "^4.5.1"
pyright = "^1.1.407"
pytest = "^9.0.2"
ruff = "0.*"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
include = [
    "**/pyproject.toml",
    "src/**/*.py",
    "src/**/*.pyi",
]
line-length = 79
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "S301",
    "RUF002",
    "INP001",
    "COM812",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]

[tool.ruff.lint.isort]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
